@@ -234,9 +234,9 @@ Sebastian Riedel, C<sri@oook.de>
 =head1 THANK YOU
 
 Andrew Ford, Andrew Ruthven, Christian Hansen, Christopher Hicks,
-Danijel Milicevic, David Naughton, Gary Ashton Jones, Jesse Sheidlower,
-Johan Lindstrom, Marcus Ramberg, Tatsuhiko Miyagawa and all the others
-who've helped.
+Dan Sully, Danijel Milicevic, David Naughton, Gary Ashton Jones,
+Jesse Sheidlower, Johan Lindstrom, Marcus Ramberg, Tatsuhiko Miyagawa
+and all the others who've helped.
 
 =head1 LICENSE
 
