@@ -5,6 +5,7 @@ This file documents the revision history for Perl extension Catalyst.
         - added optional arguments to Catalyst::Log methods (Andrew Ford)
         - removed cgi-server.pl
         - added fcgi.pl
+        - fixed an undef durng make test (Dan Sully)
 
 4.32  Tue Mar 22 02:10:00 2005
         - made a damn typo *AAAAAAAAAAAAAAHHHH!!!*
